--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
     :root { --bg: #000; --text: #33ff33; }
-    .theme-matrix { --bg: #001100; --text: #00ff00; }
-    .theme-ubuntu { --bg: #300a24; --text: #ff6600; }
-    .theme-light { --bg: #f5f5f5; --text: #222222; }
+    .matrix { --bg: #001100; --text: #00ff00; }
+    .ubuntu { --bg: #300a24; --text: #ff6600; }
+    .light { --bg: #f5f5f5; --text: #222222; }
     body { margin:0; height:100vh; background:var(--bg); color:var(--text); font-family:'Fira Code', monospace; }
     #terminal { box-sizing:border-box; padding:20px; height:100%; overflow-y:auto; }
     .line { display:flex; }
@@ -18,106 +18,116 @@
     #cmdline { background:transparent; border:none; outline:none; color:inherit; flex:1; font:inherit; }
     @keyframes blink {50%{opacity:0}} .cursor { width:8px; background:var(--text); animation:blink .8s steps(1) infinite; }
     a { color:var(--text); text-decoration:underline; }
+    pre { text-align:left; white-space:pre-wrap; }
   </style>
 </head>
-<body class="theme-matrix">
+<body class="matrix">
   <div id="terminal"></div>
   <script>
-    // Text for each language
-    const translations = {
-      en: {
-        code: 'en',
-        welcome: `Welcome to phantekzy.dev\nType 'help' to see available commands.`,
-        help: `help     - Show this help menu\nabout    - About me\nskills   - My technical skills\nprojects - Showcase of my work\ncertifications - Completed certifications\ncontact  - Contact information\nlang [en|fr|ar] - Switch language\ntheme [matrix|ubuntu|light] - Change theme\nclear    - Clear the terminal\nexit     - Close session`,
-        about: `## About Me\nHi, I'm **Maini Lotfi Abdelkader** ('phantekzy'), a Full-Stack Web Developer based in Algiers. I build scalable, maintainable web apps using JS (Node.js, React), PHP, MySQL.`,
-        skills: `- HTML5 ★★★★★\n- CSS3 ★★★★☆\n- JavaScript/ES6 ★★★★☆\n- Node.js ★★★★☆\n- React/Redux ★★★★☆\n- PHP/Laravel ★★★★☆\n- MySQL/PostgreSQL ★★★☆☆\n- Git & CI/CD ★★★★☆`,        
-        projects: `- **Terminal Portfolio**: Interactive CLI portfolio built with vanilla JS & marked.js\n- **React Weather App**: Live API weather dashboard\n- **PHP Contact Form**: Secure form handling`,
-        certifications: `- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JavaScript Algorithms\n- Microsoft: Azure Fundamentals`,
-        contact: `📨 Email: <a href=\"mailto:mainilotfi@gmail.com\">mainilotfi@gmail.com</a>`
-      },
-      fr: {
-        code: 'fr',
-        welcome: `Bienvenue sur phantekzy.dev\nTapez 'help' pour la liste des commandes.`,
-        help: `help     - Affiche ce menu d'aide\nabout    - À propos de moi\nskills   - Mes compétences\nprojects - Projets réalisés\ncertifications - Certifications\ncontact  - Contact\nlang [en|fr|ar] - Changer la langue\ntheme [matrix|ubuntu|light] - Changer le thème\nclear    - Nettoyer l'écran\nexit     - Fermer`,
-        about: `## À propos de moi\nJe suis **Maini Lotfi Abdelkader** ('phantekzy'), Développeur Full-Stack à Alger. J'utilise JS (Node.js, React), PHP, MySQL pour créer des applications web maintenables.`,        
-        skills: `- HTML5 ★★★★★\n- CSS3 ★★★★☆\n- JavaScript/ES6 ★★★★☆\n- Node.js ★★★★☆\n- React/Redux ★★★★☆\n- PHP/Laravel ★★★★☆\n- MySQL/PostgreSQL ★★★☆☆\n- Git & CI/CD ★★★★☆`,        
-        projects: `- **Terminal Portfolio**: Portfolio CLI interactif en JS & marked.js\n- **React Weather App**: Tableau météo API live\n- **PHP Contact Form**: Formulaire sécurisé`,
-        certifications: `- freeCodeCamp : Responsive Web Design\n- freeCodeCamp : JavaScript Algorithms\n- Microsoft : Azure Fundamentals`,
-        contact: `📨 Email : <a href=\"mailto:mainilotfi@gmail.com\">mainilotfi@gmail.com</a>`
-      },
-      ar: {
-        code: 'ar',
-        welcome: `مرحباً بكم في phantekzy.dev\nاكتب 'help' لعرض الأوامر.`,
-        help: `help     - عرض المساعدة\nabout    - عني\nskills   - مهاراتي\nprojects - المشاريع\ncertifications - الشهادات\ncontact  - تواصل\nlang [en|fr|ar] - تغيير اللغة\ntheme [matrix|ubuntu|light] - تغيير المظهر\nclear    - مسح الشاشة\nexit     - إنهاء`,
-        about: `## عني\nأنا **Maini Lotfi Abdelkader** ('phantekzy')، مطور Full-Stack في الجزائر. أبني تطبيقات ويب باستخدام JS، PHP، MySQL.`,
-        skills: `- HTML5 ★★★★★\n- CSS3 ★★★★☆\n- JavaScript/ES6 ★★★★☆\n- Node.js ★★★★☆\n- React/Redux ★★★★☆\n- PHP/Laravel ★★★★☆\n- MySQL/PostgreSQL ★★★☆☆\n- Git & CI/CD ★★★★☆`,
-        projects: `- **Terminal Portfolio**: محفظة CLI بـ JS & marked.js\n- **React Weather App**: تطبيق طقس API live\n- **PHP Contact Form**: نموذج تواصل آمن`,
-        certifications: `- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JavaScript Algorithms\n- Microsoft: Azure Fundamentals`,
-        contact: `📨 البريد: <a href=\"mailto:mainilotfi@gmail.com\">mainilotfi@gmail.com</a>`
+    const content = {
+      welcome: `Welcome to phantekzy.dev\nType 'help' to see available commands.`,
+      help: `help    - Show this help menu\nabout   - About me\nskills  - My technical skills\nprojects - Showcase of my work\ncertifications - Completed certifications\ncontact - Contact information\nfastfetch - Display system info\ntheme [matrix|ubuntu|light] - Change theme\nclear   - Clear the terminal\nexit    - Close session`,
+      about: `## About Me\nHi, I'm **Maini Lotfi Abdelkader** ('phantekzy'), a Full-Stack Web Developer based in Algiers. I build scalable, maintainable web apps using JS (Node.js, React), PHP, and MySQL.`,        
+      skills: `- HTML5 ★★★★★\n- CSS3 ★★★★☆\n- JavaScript/ES6 ★★★★☆\n- Node.js ★★★★☆\n- React/Redux ★★★★☆\n- PHP/Laravel ★★★★☆\n- MySQL/PostgreSQL ★★★☆☆\n- Git & CI/CD ★★★★☆`,      
+      projects: `- **Terminal Portfolio**: Interactive CLI portfolio built with vanilla JS & marked.js\n- **React Weather App**: Live API weather dashboard\n- **PHP Contact Form**: Secure form handling`,        
+      certifications: `- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JavaScript Algorithms\n- Microsoft: Azure Fundamentals`,      
+      contact: `📨 Email: <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>`,      
+      fastfetch: `<pre>        __                          __             __                          
+       /\ \                        /\ \__         /\ \                         
+ _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \'\   ____    __  __    
+/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
+\ \ \L\ \\ \ \ \ \\ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\\`\/_/  /_\\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/\.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
+   \ \_\                                                                 /\___/
+    \/_/                                                                 \/__/ 
+
+[phantekzy@archlinux ~]$ fastfetch
+
+                   -`                   phantekzy@archlinux
+                  .o+`                  -------------------------------
+                 `ooo/                  Full Name : Maini Lotfi Abdelkader
+                `+oooo:                 Alias     : phantekzy
+               `+oooooo:                Location  : Bir Mourad Ra\u00efs, Algiers, Algeria
+               -+oooooo+:               Age       : 28 (born 1996-09-08)
+             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
+            `/++++/+++++++:             Status    : Currently exploring ArchLinux
+           `/++++++++++++++:            WM        : Hyprland 
+          `/+++ooooooooooooo/`          Shell     : Zsh + Starship
+         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)
+        .oossssso-````/ossssss+`        Terminal  : Alacritty
+       -osssssso.      :ssssssso.       Browser   : Firefox / W3M
+      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
+     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
+   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
+  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
+ `++:.                           `-/+/   
+ .`                                 `
+
+check my github: https://github.com/phantekzy</pre>`
+    };
+
+    let themeClass = 'matrix';
+    const term = document.getElementById('terminal');
+
+    clearTerm(); printPre('welcome'); newPrompt();
+
+    const commands = {
+      help: () => printPre('help'),
+      about: () => printHTML(marked.parse(content.about)),
+      skills: () => printPre('skills'),
+      projects: () => printHTML(marked.parse(content.projects)),
+      certifications: () => printPre('certifications'),
+      contact: () => printHTML(content.contact),
+      fastfetch: () => printHTML(content.fastfetch),
+      clear: () => clearTerm(),
+      exit: () => print('Goodbye!'),
+      theme: arg => {
+        const name = arg.trim();
+        if (['matrix', 'ubuntu', 'light'].includes(name)) {
+          setTheme(name);
+        } else {
+          print(`Invalid theme: ${name}`);
+        }
       }
     };
 
-    let lang = 'en';
-    let theme = 'matrix';
-    const terminal = document.getElementById('terminal');
-
-    // Startup
-    clearTerminal(); showWelcome(); newPrompt();
-
-    // Commands
-    const commands = {
-      help() { displayPre('help'); },
-      about() { print(marked.parse(translations[lang].about)); },
-      skills() { print(marked.parse(translations[lang].skills)); },
-      projects() { print(marked.parse(translations[lang].projects)); },
-      certifications() { print(marked.parse(translations[lang].certifications)); },
-      contact() { print(translations[lang].contact); },
-      lang(args) {
-        if(args[1] && translations[args[1]]) {
-          lang = args[1];
-          document.documentElement.lang = translations[lang].code;
-          clearTerminal(); showWelcome();
-        } else print(`Usage: lang [en|fr|ar]`);
-      },
-      theme(args) {
-        if(args[1] && ['matrix','ubuntu','light'].includes(args[1])) {
-          theme = args[1]; document.body.className = 'theme-' + theme;
-          print(`Theme set to ${theme}`);
-        } else print(`Usage: theme [matrix|ubuntu|light]`);
-      },
-      clear() { clearTerminal(); },
-      exit() { print('Goodbye!'); }
-    };
-
-    function displayPre(key) {
-      const text = translations[lang][key].replace(/\n/g,'<br>');
-      print(`<pre>${text}</pre>`);
+    function setTheme(name) {
+      document.body.classList.remove(themeClass);
+      themeClass = name;
+      document.body.classList.add(themeClass);
+      print(`Theme set to ${name}`);
     }
 
-    function showWelcome() {
-      displayPre('welcome');
+    function print(text) {
+      const d = document.createElement('div'); d.textContent = text;
+      term.appendChild(d); term.scrollTop = term.scrollHeight;
+    }
+    function printPre(key) {
+      const d = document.createElement('pre'); d.textContent = content[key];
+      term.appendChild(d); term.scrollTop = term.scrollHeight;
+    }
+    function printHTML(html) {
+      const d = document.createElement('div'); d.innerHTML = html;
+      term.appendChild(d); term.scrollTop = term.scrollHeight;
     }
 
-    function clearTerminal() {
-      terminal.innerHTML = '';
-    }
-
-    function print(html='') {
-      const div = document.createElement('div'); div.innerHTML = html;
-      terminal.appendChild(div); terminal.scrollTop = terminal.scrollHeight;
-    }
+    function clearTerm() { term.innerHTML = ''; }
 
     function newPrompt() {
       const line = document.createElement('div'); line.className='line';
       const prompt = document.createElement('span'); prompt.className='prompt'; prompt.textContent='[phantekzy@portfolio ~]$ ';
       const input = document.createElement('input'); input.id='cmdline'; input.autocomplete='off'; input.spellcheck=false;
-      line.append(prompt, input); terminal.append(line); input.focus();
+      line.append(prompt, input); term.append(line); input.focus();
       input.addEventListener('keydown', e => {
         if(e.key==='Enter') {
-          const raw = input.value.trim(); const args = raw.split(' ');
-          input.disabled = true;
-          if(args[0]) commands[args[0]] ? commands[args[0]](args) : print(`command not found: ${args[0]}`);
-          if(args[0]!=='exit') newPrompt();
+          const val = input.value.trim(); input.disabled = true;
+          if(val) {
+            const [cmd, ...args] = val.split(' ');
+            const argStr = args.join(' ');
+            (commands[cmd] || (()=> print(`command not found: ${cmd}`)))(argStr);
+          }
+          if(val!=='exit') newPrompt();
         }
       });
     }
