--- a/index.html
+++ b/index.html
@@ -18,60 +18,42 @@
     #cmdline { background:transparent; border:none; outline:none; color:inherit; flex:1; font:inherit; }
     @keyframes blink {50%{opacity:0}} .cursor { width:8px; background:var(--text); animation:blink .8s steps(1) infinite; }
     a { color:var(--text); text-decoration:underline; }
-    pre { text-align:left; white-space:pre-wrap; }
+    pre { text-align:left; white-space:pre; }
   </style>
 </head>
 <body class="matrix">
   <div id="terminal"></div>
   <script>
+    // Static English content
     const content = {
       welcome: `Welcome to phantekzy.dev\nType 'help' to see available commands.`,
-      help: `help    - Show this help menu\nabout   - About me\nskills  - My technical skills\nprojects - Showcase of my work\ncertifications - Completed certifications\ncontact - Contact information\nfastfetch - Display system info\ntheme [matrix|ubuntu|light] - Change theme\nclear   - Clear the terminal\nexit    - Close session`,
+      help: `help        - Show this help menu\nabout       - About me\nskills      - My technical skills\nprojects     - Showcase of my work\ncertifications - Completed certifications\ncontact     - Contact information\nmatrix      - Set Matrix theme\nubuntu      - Set Ubuntu theme\nlight       - Set Light theme\nfastfetch   - Display system info\nclear       - Clear the terminal\nexit        - Close session`,
       about: `## About Me\nHi, I'm **Maini Lotfi Abdelkader** ('phantekzy'), a Full-Stack Web Developer based in Algiers. I build scalable, maintainable web apps using JS (Node.js, React), PHP, and MySQL.`,        
       skills: `- HTML5 ★★★★★\n- CSS3 ★★★★☆\n- JavaScript/ES6 ★★★★☆\n- Node.js ★★★★☆\n- React/Redux ★★★★☆\n- PHP/Laravel ★★★★☆\n- MySQL/PostgreSQL ★★★☆☆\n- Git & CI/CD ★★★★☆`,      
       projects: `- **Terminal Portfolio**: Interactive CLI portfolio built with vanilla JS & marked.js\n- **React Weather App**: Live API weather dashboard\n- **PHP Contact Form**: Secure form handling`,        
       certifications: `- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JavaScript Algorithms\n- Microsoft: Azure Fundamentals`,      
       contact: `📨 Email: <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>`,      
-      fastfetch: `<pre>        __                          __             __                          
-       /\ \                        /\ \__         /\ \                         
+      fastfetch: `       __                          __             __                          
+      /\ \                        /\ \__         /\ \                         
  _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \'\   ____    __  __    
-/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
-\ \ \L\ \\ \ \ \ \\ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\\`\/_/  /_\\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/\.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+/\ '__\`\\ \  _ \\   /'__\`\   /' _ \`\\ \ \/   /'__\`\\ \ , <  /\_ ,\`\\ /\ \/\ \   
+\ \ \L\ \\ \ \ \ \\ /\ \L\.\`.\\ /\ \/\ \\ \ \_ /\  __/ \ \ \\\`\/_/  /_\\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/.\`\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
   \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
-   \ \_\                                                                 /\___/
-    \/_/                                                                 \/__/ 
+   \ \_\                                                                 /\___/  
+    \/_/                                                                 \/__/   
 
-[phantekzy@archlinux ~]$ fastfetch
-
-                   -`                   phantekzy@archlinux
-                  .o+`                  -------------------------------
-                 `ooo/                  Full Name : Maini Lotfi Abdelkader
-                `+oooo:                 Alias     : phantekzy
-               `+oooooo:                Location  : Bir Mourad Ra\u00efs, Algiers, Algeria
-               -+oooooo+:               Age       : 28 (born 1996-09-08)
-             `/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
-            `/++++/+++++++:             Status    : Currently exploring ArchLinux
-           `/++++++++++++++:            WM        : Hyprland 
-          `/+++ooooooooooooo/`          Shell     : Zsh + Starship
-         ./ooosssso++osssssso+`         Editor    : Neovim (Lua)
-        .oossssso-````/ossssss+`        Terminal  : Alacritty
-       -osssssso.      :ssssssso.       Browser   : Firefox / W3M
-      :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
-     /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
-   `/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
-  `+sso+:-`                 `.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
- `++:.                           `-/+/   
- .`                                 `
-
-check my github: https://github.com/phantekzy</pre>`
+[phantekzy@archlinux ~]$ fastfetch`,
+      social: `check my github: https://github.com/phantekzy`
     };
 
     let themeClass = 'matrix';
     const term = document.getElementById('terminal');
 
+    // Initialize
     clearTerm(); printPre('welcome'); newPrompt();
 
+    // Command handlers
     const commands = {
       help: () => printPre('help'),
       about: () => printHTML(marked.parse(content.about)),
@@ -79,17 +61,13 @@ check my github: https://github.com/phantekzy</pre>`
       projects: () => printHTML(marked.parse(content.projects)),
       certifications: () => printPre('certifications'),
       contact: () => printHTML(content.contact),
-      fastfetch: () => printHTML(content.fastfetch),
+      fastfetch: () => printPre('fastfetch'),
+      social: () => print(content.social),
+      matrix: () => setTheme('matrix'),
+      ubuntu: () => setTheme('ubuntu'),
+      light: () => setTheme('light'),
       clear: () => clearTerm(),
-      exit: () => print('Goodbye!'),
-      theme: arg => {
-        const name = arg.trim();
-        if (['matrix', 'ubuntu', 'light'].includes(name)) {
-          setTheme(name);
-        } else {
-          print(`Invalid theme: ${name}`);
-        }
-      }
+      exit: () => print('Goodbye!')
     };
 
     function setTheme(name) {
@@ -121,13 +99,11 @@ check my github: https://github.com/phantekzy</pre>`
       line.append(prompt, input); term.append(line); input.focus();
       input.addEventListener('keydown', e => {
         if(e.key==='Enter') {
-          const val = input.value.trim(); input.disabled = true;
-          if(val) {
-            const [cmd, ...args] = val.split(' ');
-            const argStr = args.join(' ');
-            (commands[cmd] || (()=> print(`command not found: ${cmd}`)))(argStr);
+          const cmd = input.value.trim(); input.disabled = true;
+          if(cmd) {
+            (commands[cmd] || (()=> print(`command not found: ${cmd}`)))();
           }
-          if(val!=='exit') newPrompt();
+          if(cmd!=='exit') newPrompt();
         }
       });
     }
