--- a/index.html
+++ b/index.html
@@ -1,112 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>phantekzy | Full-Stack Terminal Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>phantekzy | Advanced Terminal Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
-    :root { --bg: #000; --text: #33ff33; }
-    .matrix { --bg: #001100; --text: #00ff00; }
-    .ubuntu { --bg: #300a24; --text: #ff6600; }
-    .light { --bg: #f5f5f5; --text: #222222; }
+    :root {
+      --bg: #000;
+      --text: #33ff33;
+    }
+    .theme-ubuntu { --bg: #300a24; --text: #ff6600; }
+    .theme-matrix { --bg: #001100; --text: #00ff00; }
     body { margin:0; height:100vh; background:var(--bg); color:var(--text); font-family:'Fira Code', monospace; }
     #terminal { box-sizing:border-box; padding:20px; height:100%; overflow-y:auto; }
     .line { display:flex; }
     .prompt { flex-shrink:0; }
     #cmdline { background:transparent; border:none; outline:none; color:inherit; flex:1; font:inherit; }
-    @keyframes blink {50%{opacity:0}} .cursor { width:8px; background:var(--text); animation:blink .8s steps(1) infinite; }
+    .cursor { width:8px; background:var(--text); animation:blink .8s steps(1) infinite; }
+    @keyframes blink {50%{opacity:0}}
     a { color:var(--text); text-decoration:underline; }
-    pre { text-align:left; white-space:pre; }
   </style>
 </head>
-<body class="matrix">
+<body class="theme-matrix">
   <div id="terminal"></div>
   <script>
-    // Static English content
-    const content = {
-      welcome: `Welcome to phantekzy.dev\nType 'help' to see available commands.`,
-      help: `help        - Show this help menu\nabout       - About me\nskills      - My technical skills\nprojects     - Showcase of my work\ncertifications - Completed certifications\ncontact     - Contact information\nmatrix      - Set Matrix theme\nubuntu      - Set Ubuntu theme\nlight       - Set Light theme\nfastfetch   - Display system info\nclear       - Clear the terminal\nexit        - Close session`,
-      about: `## About Me\nHi, I'm **Maini Lotfi Abdelkader** ('phantekzy'), a Full-Stack Web Developer based in Algiers. I build scalable, maintainable web apps using JS (Node.js, React), PHP, and MySQL.`,        
-      skills: `- HTML5 ★★★★★\n- CSS3 ★★★★☆\n- JavaScript/ES6 ★★★★☆\n- Node.js ★★★★☆\n- React/Redux ★★★★☆\n- PHP/Laravel ★★★★☆\n- MySQL/PostgreSQL ★★★☆☆\n- Git & CI/CD ★★★★☆`,      
-      projects: `- **Terminal Portfolio**: Interactive CLI portfolio built with vanilla JS & marked.js\n- **React Weather App**: Live API weather dashboard\n- **PHP Contact Form**: Secure form handling`,        
-      certifications: `- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JavaScript Algorithms\n- Microsoft: Azure Fundamentals`,      
-      contact: `📨 Email: <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>`,      
-      fastfetch: `       __                          __             __                          
-      /\ \                        /\ \__         /\ \                         
- _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \'\   ____    __  __    
-/\ '__\`\\ \  _ \\   /'__\`\   /' _ \`\\ \ \/   /'__\`\\ \ , <  /\_ ,\`\\ /\ \/\ \   
-\ \ \L\ \\ \ \ \ \\ /\ \L\.\`.\\ /\ \/\ \\ \ \_ /\  __/ \ \ \\\`\/_/  /_\\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/.\`\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
-  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
-   \ \_\                                                                 /\___/  
-    \/_/                                                                 \/__/   
-
-[phantekzy@archlinux ~]$ fastfetch`,
-      social: `check my github: https://github.com/phantekzy`
+    const terminal = document.getElementById('terminal');
+    const themes = ['matrix','ubuntu'];
+    let history = [], histIdx = 0;
+    const data = {
+      about: '## About Me\nSelf-taught developer transitioning into CyberSec. Passionate about Linux and open source.',
+      skills: '- HTML5\n- CSS3\n- JavaScript\n- PHP\n- Node.js\n- React\n- MySQL\n- Linux\n- Bash\n- Git',
+      projects: '- **Terminal Portfolio**: This site!\n- **CyberSec Tools**: Collection of pentesting scripts\n- **React Weather App**: Live forecast app',
+      certifications: '- freeCodeCamp: Responsive Web Design\n- freeCodeCamp: JS Algorithms\n- IBM Cybersecurity Analyst (In Progress)',
+      goals: '1. Master Fullstack\n2. Specialize in CyberSec\n3. Learn German\n4. Get remote job\n5. Move to Europe'
     };
-
-    let themeClass = 'matrix';
-    const term = document.getElementById('terminal');
-
-    // Initialize
-    clearTerm(); printPre('welcome'); newPrompt();
-
-    // Command handlers
-    const commands = {
-      help: () => printPre('help'),
-      about: () => printHTML(marked.parse(content.about)),
-      skills: () => printPre('skills'),
-      projects: () => printHTML(marked.parse(content.projects)),
-      certifications: () => printPre('certifications'),
-      contact: () => printHTML(content.contact),
-      fastfetch: () => printPre('fastfetch'),
-      social: () => print(content.social),
-      matrix: () => setTheme('matrix'),
-      ubuntu: () => setTheme('ubuntu'),
-      light: () => setTheme('light'),
-      clear: () => clearTerm(),
-      exit: () => print('Goodbye!')
-    };
-
-    function setTheme(name) {
-      document.body.classList.remove(themeClass);
-      themeClass = name;
-      document.body.classList.add(themeClass);
-      print(`Theme set to ${name}`);
+    function print(html=''){
+      const div = document.createElement('div'); div.innerHTML = html; terminal.appendChild(div);
+      terminal.scrollTop = terminal.scrollHeight;
     }
-
-    function print(text) {
-      const d = document.createElement('div'); d.textContent = text;
-      term.appendChild(d); term.scrollTop = term.scrollHeight;
-    }
-    function printPre(key) {
-      const d = document.createElement('pre'); d.textContent = content[key];
-      term.appendChild(d); term.scrollTop = term.scrollHeight;
-    }
-    function printHTML(html) {
-      const d = document.createElement('div'); d.innerHTML = html;
-      term.appendChild(d); term.scrollTop = term.scrollHeight;
-    }
-
-    function clearTerm() { term.innerHTML = ''; }
-
-    function newPrompt() {
+    function newPrompt(){
       const line = document.createElement('div'); line.className='line';
       const prompt = document.createElement('span'); prompt.className='prompt'; prompt.textContent='[phantekzy@portfolio ~]$ ';
-      const input = document.createElement('input'); input.id='cmdline'; input.autocomplete='off'; input.spellcheck=false;
-      line.append(prompt, input); term.append(line); input.focus();
-      input.addEventListener('keydown', e => {
-        if(e.key==='Enter') {
-          const cmd = input.value.trim(); input.disabled = true;
-          if(cmd) {
-            (commands[cmd] || (()=> print(`command not found: ${cmd}`)))();
-          }
-          if(cmd!=='exit') newPrompt();
-        }
+      const input = document.createElement('input'); input.id='cmdline'; input.autocomplete='off';
+      line.append(prompt,input); terminal.append(line);
+      input.focus(); addListeners(input);
+    }
+    function addListeners(input){
+      input.addEventListener('keydown', e=>{
+        if(e.key==='Enter'){
+          const cmd = input.value.trim(); history.push(cmd); histIdx=history.length;
+          input.disabled=true; execute(cmd);
+        } else if(e.key==='ArrowUp'){ if(histIdx>0){ histIdx--; input.value=history[histIdx]; }}
+        else if(e.key==='ArrowDown'){ if(histIdx<history.length-1){ histIdx++; input.value=history[histIdx]; } else input.value=''; }
+        else if(e.key==='Tab'){ e.preventDefault(); autocomplete(input); }
       });
     }
+    function autocomplete(input){
+      const cmds = Object.keys(commands);
+      const val = input.value; const matches = cmds.filter(c=>c.startsWith(val));
+      if(matches.length===1) input.value=matches[0]+' ';
+    }
+    const commands = {
+      help(){ print(Object.keys(commands).join(' | ')); },
+      about(){ print(marked.parse(data.about)); },
+      skills(){ print(marked.parse(data.skills)); },
+      projects(){ print(marked.parse(data.projects)); },
+      certifications(){ print(marked.parse(data.certifications)); },
+      goals(){ print(marked.parse(data.goals)); },
+      clear(){ terminal.innerHTML=''; },
+      theme(args){ const t=args[1]; if(themes.includes(t)){ document.body.className='theme-'+t; print('Theme set to '+t); } else print('Unknown theme'); },
+      resume(){ print('<a href="resume.pdf" download>Download Resume</a>'); },
+      contact(){ print('Email: <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>'); },
+      socials(){ print('GitHub | LinkedIn | X | YouTube'); },
+      exit(){ print('Goodbye!'); }
+    };
+    function execute(input){
+      if(!input) return newPrompt();
+      const args = input.split(' '), cmd=args[0];
+      if(commands[cmd]) commands[cmd](args);
+      else print(`command not found: ${cmd}`);
+      if(cmd!=='exit') newPrompt();
+    }
+    // Start
+    print('<pre>Welcome to phantekzy\'s terminal portfolio. Type <code>help</code> to get started.</pre>');
+    newPrompt();
   </script>
 </body>
 </html>
