--- a/index.html
+++ b/index.html
@@ -46,160 +46,143 @@
     a { color: var(--text); text-decoration: underline; }
   </style>
 </head>
-<body class="theme-matrix">
+<body class="theme-ubuntu"><!-- use ubuntu for debugging -->
   <div id="terminal"></div>
 
   <script>
-    const terminal = document.getElementById('terminal');
-    const themes = ['matrix', 'ubuntu'];
-    let history = [], histIdx = 0;
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log('Terminal script starting…');  // check your browser console
 
-    // Content data
-    const data = {
-      about: `
+      const terminal = document.getElementById('terminal');
+      const themes = ['matrix', 'ubuntu'];
+      let history = [], histIdx = 0;
+
+      const data = {
+        about: `
 ## About Me
 
 I am a results-oriented web developer specializing in responsive, user-centric applications. My core skill set includes:
 
-- HTML5 & CSS3
-- Modern JavaScript (ES6+), React, Node.js
-- PHP & MySQL
-- Linux environments, Bash scripting
+- HTML5 & CSS3  
+- Modern JavaScript (ES6+), React, Node.js  
+- PHP & MySQL  
+- Linux environments, Bash scripting  
 - Git version control
 
 I focus on clean, maintainable code, performance, and seamless user experiences.
-      `,
-      goals: `
-- Build modern full-stack web applications
-- Deepen expertise in JavaScript and backend frameworks
-- Learn secure coding practices and web security
+        `,
+        goals: `
+- Build modern full-stack web applications  
+- Deepen expertise in JavaScript and backend frameworks  
+- Learn secure coding practices and web security  
 - Contribute to open source projects
-      `
-    };
+        `
+      };
 
-    // Command definitions
-    const commands = {
-      help() {
-        print(`
-about | projects | goals | theme [name] | socials | clear | exit
-        `);
-      },
-
-      about() {
-        print(marked.parse(data.about));
-      },
-
-      projects: async function() {
-        print('Fetching repositories from GitHub...');
-        try {
-          const res = await fetch('https://api.github.com/users/phantekzy/repos?sort=updated');
-          const repos = await res.json();
-          if (!Array.isArray(repos)) throw new Error('Unexpected response');
-          const md = repos.map(r =>
-            \`- [\${r.name}](\${r.html_url}): \${r.description || 'No description'}\`
-          ).join('\\n');
-          print(marked.parse(md));
-        } catch (err) {
-          print('Error fetching projects: ' + err.message);
+      const commands = {
+        help() {
+          print(\`about | projects | goals | theme [name] | socials | clear | exit\`);
+        },
+        about() {
+          print(marked.parse(data.about));
+        },
+        projects: async function() {
+          print('Fetching repositories from GitHub…');
+          try {
+            const res = await fetch('https://api.github.com/users/phantekzy/repos?sort=updated');
+            const repos = await res.json();
+            if (!Array.isArray(repos)) throw new Error('Bad response');
+            const md = repos.map(r =>
+              \`- [\${r.name}](\${r.html_url}): \${r.description || 'No description'}\`
+            ).join('\\n');
+            print(marked.parse(md));
+          } catch (e) {
+            print('Error fetching projects: ' + e.message);
+          }
+        },
+        goals() {
+          print(marked.parse(data.goals));
+        },
+        theme(args) {
+          const name = args[1];
+          if (themes.includes(name)) {
+            document.body.className = 'theme-' + name;
+            print('Theme set to ' + name);
+          } else {
+            print('Available themes: ' + themes.join(', '));
+          }
+        },
+        socials() {
+          print(\`GitHub: <a href="https://github.com/phantekzy" target="_blank">github.com/phantekzy</a>\`);
+        },
+        clear() {
+          terminal.innerHTML = '';
+        },
+        exit() {
+          print('Goodbye!');
         }
-      },
+      };
 
-      goals() {
-        print(marked.parse(data.goals));
-      },
-
-      theme(args) {
-        const name = args[1];
-        if (themes.includes(name)) {
-          document.body.className = 'theme-' + name;
-          print('Theme set to ' + name);
-        } else {
-          print('Available themes: ' + themes.join(', '));
-        }
-      },
-
-      socials() {
-        print(\`
-GitHub: <a href="https://github.com/phantekzy" target="_blank">github.com/phantekzy</a>
-        \`);
-      },
-
-      clear() {
-        terminal.innerHTML = '';
-      },
-
-      exit() {
-        print('Goodbye!');
+      function print(html = '') {
+        const div = document.createElement('div');
+        div.innerHTML = html;
+        terminal.appendChild(div);
+        terminal.scrollTop = terminal.scrollHeight;
       }
-    };
 
-    // Utility: render HTML and scroll
-    function print(html = '') {
-      const div = document.createElement('div');
-      div.innerHTML = html;
-      terminal.appendChild(div);
-      terminal.scrollTop = terminal.scrollHeight;
-    }
+      function newPrompt() {
+        const line = document.createElement('div');
+        line.className = 'line';
+        const prompt = document.createElement('span');
+        prompt.className = 'prompt';
+        prompt.textContent = '[phantekzy@portfolio ~]$ ';
+        const input = document.createElement('input');
+        input.id = 'cmdline';
+        input.autocomplete = 'off';
+        line.append(prompt, input);
+        terminal.append(line);
+        input.focus();
+        addListeners(input);
+      }
 
-    // Create a new prompt line
-    function newPrompt() {
-      const line = document.createElement('div');
-      line.className = 'line';
+      function addListeners(input) {
+        input.addEventListener('keydown', e => {
+          if (e.key === 'Enter') {
+            const cmd = input.value.trim();
+            history.push(cmd);
+            histIdx = history.length;
+            input.disabled = true;
+            execute(cmd);
+          } else if (e.key === 'ArrowUp') {
+            if (histIdx > 0) input.value = history[--histIdx] || '';
+          } else if (e.key === 'ArrowDown') {
+            if (histIdx < history.length - 1) input.value = history[++histIdx] || '';
+            else input.value = '';
+          } else if (e.key === 'Tab') {
+            e.preventDefault();
+            autocomplete(input);
+          }
+        });
+      }
 
-      const prompt = document.createElement('span');
-      prompt.className = 'prompt';
-      prompt.textContent = '[phantekzy@portfolio ~]$ ';
+      function autocomplete(input) {
+        const val = input.value;
+        const matches = Object.keys(commands).filter(c => c.startsWith(val));
+        if (matches.length === 1) input.value = matches[0] + ' ';
+      }
 
-      const input = document.createElement('input');
-      input.id = 'cmdline';
-      input.autocomplete = 'off';
+      function execute(input) {
+        if (!input) return newPrompt();
+        const args = input.split(' ');
+        const cmd = args[0];
+        (commands[cmd] || (() => print('command not found: ' + cmd)))(args);
+        if (cmd !== 'exit') newPrompt();
+      }
 
-      line.append(prompt, input);
-      terminal.append(line);
-      input.focus();
-      addListeners(input);
-    }
-
-    // Handle keyboard input
-    function addListeners(input) {
-      input.addEventListener('keydown', e => {
-        if (e.key === 'Enter') {
-          const cmd = input.value.trim();
-          history.push(cmd);
-          histIdx = history.length;
-          input.disabled = true;
-          execute(cmd);
-        } else if (e.key === 'ArrowUp') {
-          if (histIdx > 0) input.value = history[--histIdx] || '';
-        } else if (e.key === 'ArrowDown') {
-          if (histIdx < history.length - 1) input.value = history[++histIdx] || '';
-          else input.value = '';
-        } else if (e.key === 'Tab') {
-          e.preventDefault();
-          autocomplete(input);
-        }
-      });
-    }
-
-    // Simple autocomplete
-    function autocomplete(input) {
-      const val = input.value;
-      const matches = Object.keys(commands).filter(c => c.startsWith(val));
-      if (matches.length === 1) input.value = matches[0] + ' ';
-    }
-
-    // Execute a command
-    function execute(input) {
-      if (!input) return newPrompt();
-      const args = input.split(' ');
-      const cmd = args[0];
-      (commands[cmd] || (() => print(\`command not found: \${cmd}\`)))(args);
-      if (cmd !== 'exit') newPrompt();
-    }
-
-    // Initial welcome
-    print('<pre>Welcome to phantekzy\\'s terminal portfolio. Type <code>help</code> to get started.</pre>');
-    newPrompt();
+      // kick things off
+      print('<pre>Welcome to phantekzy\\'s terminal portfolio. Type <code>help</code> to get started.</pre>');
+      newPrompt();
+    });
   </script>
 </body>
 </html>
